@startuml
title TaskFlow — Entity Class Diagram
skinparam componentStyle rectangle
skinparam classAttributeIconSize 0

class TodoEntity {
  +id: Option<String>
  +user_id: String
  +title: String
  +description: Option<String>
  +visibility: String
  +priority: String
  +categories: Vec<String>
  +assignees: Vec<String>
  +assignee_roles: HashMap<String, String>
  +start_date: Option<String>
  +end_date: Option<String>
  +github_repo_id: Option<String>
  +tasks_count: i32
  +completed_tasks_count: i32
}

class TaskEntity {
  +id: Option<String>
  +todo_id: String
  +user_id: String
  +title: String
  +description: String
  +status: TaskStatus
  +priority: String
  +start_date: Option<String>
  +end_date: Option<String>
  +order: i32
  +subtasks_count: i32
  +completed_subtasks_count: i32
  +comments_count: i32
}

class SubtaskEntity {
  +id: Option<String>
  +task_id: String
  +title: String
  +completed: bool
  +order: i32
}

class UserEntity {
  +id: Option<String>
  +email: String
  +username: String
  +password: String
  +role: String
  +profile_id: String
  +totp_enabled: bool
  +qr_login_enabled: bool
  +github_*: String
  +recovery_codes: Vec<String>
}

class GroupEntity {
  +id: Option<String>
  +name: String
  +room_id: String
  +owner_id: String
  +member_ids: Vec<String>
}

class RoomEntity {
  +id: Option<String>
  +name: Option<String>
  +room: String
  +is_group: bool
  +participant_ids: Vec<String>
}

class CategoryEntity {
  +id: Option<String>
  +name: String
  +color: String
  +user_id: String
}

class ChatEntity {
  +id: Option<String>
  +group_id: String
  +user_id: String
  +message: String
  +message_type: String
}

class ProfileEntity {
  +id: Option<String>
  +user_id: String
  +display_name: String
  +avatar: Option<String>
}

TodoEntity "1" -- "*" TaskEntity : contains >
TaskEntity "1" -- "*" SubtaskEntity : contains >
UserEntity "1" -- "*" TodoEntity : owns >
UserEntity "1" -- "1" ProfileEntity : has >
GroupEntity "1" -- "1" RoomEntity : uses >
GroupEntity "1" -- "*" UserEntity : members >
ChatEntity "1" -- "1" GroupEntity : belongs to >

note bottom of TodoEntity
  nosql_orm @table_name("todos")
  @soft_delete, @timestamp
  @one_to_many("tasks", "tasks", "todo_id", "Cascade")
  @many_to_one("user", "users", "user_id")
end note
@enduml
